<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_str">Add New Task</string>
    <string name="ongoing_str">Ongoing Tasks</string>
    <string name="history_str">History</string>
    <string name="title_activity_add_task">New Task</string>
    <string name="title_activity_ongoing">My Ongoing Tasks </string>
    <string name="title_activity_history">My Past Tasks</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="current_location">Your Current Location</string>
    <string name="reminder">Reminder</string>
    <string name="title">Title</string>
    <string name="sure_to_delete">Delete task?</string>
    <string name="past_or_delete">Move task to history?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="y_move">Yes, move it</string>
    <string name="n_delete">No, delete it</string>
    <string name="new_task">New Task</string>
    <string name="remove_all">REMOVE ALL</string>
    <string name="reminder_distance">Reminder Distance</string>
    

</resources>
