<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/newtaskrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/newdescrow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/desc_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="" >

            <requestFocus />
        </EditText>
    </TableRow>

      <TableRow
        android:id="@+id/newlocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rem_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/loc_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
             >

            <requestFocus />
        </EditText>
    </TableRow>
    
    <TableRow
        android:id="@+id/newreminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/rem_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_distance" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/rem_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
			>

            <requestFocus />
        </EditText>
    </TableRow>

</TableLayout>